[package]
name = "ominira-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
pqcrypto-sphincsplus = "0.7.1"
pqcrypto-traits = "0.3.5"
blake3 = "1.5.0"
hex = "0.4"
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
reqwest = { version = "0.11", features = ["blocking", "gzip", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
crossbeam-channel = "0.5"
